k8s-config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: sso
      student: dave-lee
  template:
    metadata:
      labels:
        component: sso
        student: dave-lee
    spec:
      containers:
        - name: static
          image: ensaas/sso-frontend:v0.9.9
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 10m
              memory: 32Mi
              ephemeral-storage: 32Mi
            requests:
              cpu: 10m
              memory: 32Mi
