k8s-config/sso-frontend-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso-frontend-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000
      targetPort: 3000
