k8s-config/sso-frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sso-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ssofrontend.devspace.eks004.en.internal
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: sso-frontend-cluster-ip
              servicePort: 3000
